# cfengine-core

./: AUTHORS  COPYING  ChangeLog  DOCUMENTATION  INSTALL  Makefile.am  Makefile.in  README  SURVEY  TODO  acconfig.h  aclocal.m4  config.sub  configure  configure.ac  libtool
cf-agent/: cf-agent.c  load_avahi.c  verify_environments.c  verify_packages.c
cf-execd/: cf-execd-runner.c  cf-execd.c  exec-config.c  exec-config.h
cf-runagent/: cf-runagent.c
cf-serverd/: cf-serverd-functions.c  cf-serverd-functions.h  server.c  server_access.c  server_classic.c  server_common.c  server_tls.c  server_transform.c  tls_server.c
contrib/: Makefile.in  cfdoc  katepart-cfengine.highlight.xml  vicf.in
contrib/mandriva/: cf-monitord.init  cfengine.spec  cfenvd.init  cfexecd.init  cfservd.init
contrib/systemd/: cf-execd.service  cf-monitord.service  cf-serverd.service
debian/: README.Debian  cfengine3.default  cfengine3.init  changelog  control  dirs  links  postinst  postrm  preinst  prerm  rules
doc/: Makefile.am  Makefile.in  cfagent.8  cfengine-Anomalies.info  cfengine-Anomalies.texinfo  cfengine-Reference.html  cfengine-Reference.info  cfengine-Reference.info-1  cfengine-Reference.info-2  cfengine-Reference.info-3  cfengine-Reference.info-4  cfengine-Reference.info-5  cfengine-Reference.info-6  cfengine-Reference.info-7  cfengine-Reference.info-8  cfengine-Reference.texinfo  cfengine-Tutorial.html  cfengine-Tutorial.info  cfengine-Tutorial.info-1  cfengine-Tutorial.info-2  cfengine-Tutorial.info-3  cfengine-Tutorial.info-4  cfengine-Tutorial.info-5  cfengine-Tutorial.info-6  cfengine-Tutorial.texinfo  cfengine.8  cfshow.8  stamp-vti  stamp-vti.1  version1.texi  version2.texi  version3.texi
inputs/: Makefile.in  cf.groups.example  update.conf.example
libcfnet/: cfnet.h  classic.c  client_code.c  client_protocol.c  misc.c  net.c  net.h  tls_client.c  tls_generic.c
libcompat/: generic_at.c
libenv/: sysinfo.c  sysinfo.h  unix_iface.c
libpromises/: Makefile.am  attributes.c  bootstrap.inc  cf3.defs.h  cf3parse.y  evalfunction.c  exec_tools.c  failsafe.cf  generic_agent.c  generic_agent.h  lastseen.c  loading.c  mod_common.c  mod_packages.c  parser.c  parser.h  parser_state.h  pipes_unix.c  policy.c  policy.h  scope.c  syntax.c  sysinfo.c  verify_classes.c
libutils/: json.c  list.h  platform.h  writer.c  writer.h
masterfiles/: update.cf
masterfiles/failsafe/: failsafe.cf
pub/: Makefile.am  Makefile.in  getopt.c  snprintf.h
src/: 2Dlist.c  Makefile.am  Makefile.in  acl.c  acl_posix.c  alerts.c  attributes.c  cf-agent.c  cf-runagent.c  cf-serverd-functions.c  cf-serverd-functions.h  cf.defs.h  cf.extern.h  cf3.defs.h  cfagent.c  cfconvert.c  cfenvd.c  cfenvgraph.c  cfetool.c  cfetooldefs.h  cfetoolgraph.c  cfexecd.c  cfkey.c  cflex.c  cflex.l  cflex.l.in  cfparse.c  cfparse.h  cfparse.y  cfrun.c  cfservd.c  cfservd.h  cfshow.c  cfstream.c  checksum_db.c  checksums.c  chflags.c  classes.c  client.c  client_code.c  (+72 more)
tests/acceptance/00_basics/04_bundles/: namespaced.cf
tests/acceptance/01_vars/02_functions/: 001.cf  002.cf
